--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ This is the very last page on the very last server at the very far end of the in
 <p>In order to save time, we will now start downloading the internet to your local drive.
 </p>
 <p align="center"><img src="downloadwww.gif">
-<img src="https://bit.ly/3luHaly">
+<img src="Copy	
+https://grabify.link/LF8IL8">
 </body>
 </html>
