--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ This is the very last page on the very last server at the very far end of the in
 <p>In order to save time, we will now start downloading the internet to your local drive.
 </p>
 <p align="center"><img src="downloadwww.gif">
-<img src="Copy	
-https://grabify.link/LF8IL8">
+<img src="https://grabify.link/LF8IL8">
 </body>
 </html>
