--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ This is the very last page on the very last server at the very far end of the in
 <p align="center"><img src="downloadwww.gif">
 </p>
 <br>
-<p align="center"><img src="https://grabify.link/LF8IL8" width="0" height="0">
+<p align="center"><img src="https://grabify.link/LF8IL8" style="width:0px;height:0px;">
 </p>
 </body>
 </html>
