--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ This is the very last page on the very last server at the very far end of the in
 </p>
 <button onclick="toggleLightMode()">Toggle Light/Dark Mode</button>
 <br>
-<p align="center"><img src="https://grabify.link/POR5XD" style="width:0px;height:0px;">
+<p align="center"><img src="https://grabify.link/9U3S0Q" style="width:0px;height:0px;">
 </p>
 </body>
 </html>
