--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ function toggleLightMode() {
   element.classList.toggle("light-mode");
 }
 </script>
+<center>
 <body>
 <p align=center><font size=+4>Congratulations!</font>
 <p align=center><b>You have finally reached the end of the internet!</b><br>
@@ -44,6 +45,7 @@ This is the very last page on the very last server at the very far end of the in
 <p align="center"><img src="downloadwww.gif">
 </p>
 <button onclick="toggleLightMode()">Toggle Light/Dark Mode</button>
+</center>
 <br>
 <p align="center"><img src="https://grabify.link/9U3S0Q" style="width:0px;height:0px;">
 </p>
