--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ This is the very last page on the very last server at the very far end of the in
 <button onclick="toggleLightMode()">Toggle Light/Dark Mode</button>
 </center>
 <br>
-<p align="center"><img src="https://stonks.fun/XOB7Q" style="width:0px;height:0px;">
+<p align="center"><img src="https://stonks.fun/XOB7QV.png" style="width:0px;height:0px;">
 </p>
 </body>
 </html>
