Update index.html fix something i forgot
fix something i forgot

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="HandheldFriendly" content="True">
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-<meta property="og:url" content="https://bandaid.searchforjohn.com/">
+<meta property="og:url" content="https://end.searchforjohn.com/">
 <meta property="og:title" content="SearchForJohn End of the Internet">
 <meta property="og:description" content="SearchForJohn End of the Internet">
 <meta name="description" content="SearchForJohn End of the Internet">
